<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/img_Login"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/edt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bovien"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_margin="10dp"
        android:background="@drawable/bovien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20dp" />

    <CheckBox
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/btnlogin" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btn_Login_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnsignup" />
</LinearLayout>