<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/img_SignUp"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/edt_SignUp_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_SignUp_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_SignUp_RePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20dp" />


    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnsignup" />
</LinearLayout>